# cpp-python-detector

./: .gitignore  CMakeLists.txt  README.md  main.cpp
inference/: requirements.txt  server.py
